bookinfo/03_details_service_v2/istio-destination-rule.yaml
# Update the details destination rule to know about the details v2 application
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details
  namespace: bookinfo
spec:
  host: details.bookinfo.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
