bookinfo/03_details_service_v2/istio-details-all-v2.yaml
# Send all traffic to v2 of the details application.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
  namespace: bookinfo
spec:
  hosts:
  - details.bookinfo.svc.cluster.local
  http:
  - route:
    - destination:
        host: details.bookinfo.svc.cluster.local
        subset: v2
