bookinfo/03_details_service_v2/istio-details-mirror-v2.yaml
# Send all traffic to v1 of the details application and mirror also to v2.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
  namespace: bookinfo
spec:
  hosts:
  - details.bookinfo.svc.cluster.local
  http:
  - route:
    - destination:
        host: details.bookinfo.svc.cluster.local
        subset: v1
      weight: 100
    mirror:
      host: details.bookinfo.svc.cluster.local
      subset: v2
